# uav-systems-architecture

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CURRICULUM.md  HATALOG.md  LICENSE  QUICKSTART.md  README.md  SÖZLÜK.md  equipment_list.md  package.xml
.github/workflows/: ros2_ci.yml  sovereign_ci.yml
config/: fastdds_profile.xml
docker/: Dockerfile  docker-compose.yml
docs/: FAILSAFE_LOGIC.md  LAB_01_ROS2_BASICS.md  LAB_02_PID_TUNING.md  LAB_03_EDGE_AI.md  MAVLINK_DDS_BRIDGE.md  POWER_MANAGEMENT.md  edge_ai_optimization.md  gnc-framework.md  hardware_topology.md  software_stack.md  system_status.md
launch/: sovereign_launch.py
moduls/: 01_aero.md  02_electronics.md  03_fc_sensors.md  04_software.md  05_first_build.md
odevler/: README.md
odevler/modul1/: template.md
odevler/modul5/: template.md
protocols/: safety-protocols.md
scripts/: bootstrap.sh  setup_env.sh  sitl_quickstart.sh
src/gnc/: pid_controller.cpp  pid_controller.hpp  sovereign_gnc_node.cpp  trajectory_generator.cpp
src/middleware/: heartbeat_monitor.py
src/mission/: mission_manager.cpp
src/perception/: target_detector.py  target_perception_node.py  tensorrt_wrapper.py
src/tactical_engine/: engine.py
templates/: gstreamer_pipeline.sh  ros2_node.cpp
